fix(look&feel,apollo): adjust spacing and color for file upload styles

--- a/client/apollo/css/src/Form/FileUpload/InputFile/InputFileLF.css
+++ b/client/apollo/css/src/Form/FileUpload/InputFile/InputFileLF.css
@@ -22,5 +22,5 @@
 }
 
 .af-input-file__help {
-  --input-file-help-color: var(--color-gray-500);
+  --input-file-help-color: var(--color-gray-700);
 }
